--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.34.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
