--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
-    "start": "next start",
+    "dev": "./node_modules/.bin/next dev --webpack",
+    "build": "./node_modules/.bin/next build --webpack",
+    "start": "./node_modules/.bin/next start",
     "lint": "eslint",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -14,12 +14,20 @@
     "@clerk/nextjs": "^6.34.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "@react-pdf/renderer": "^4.3.1",
+    "@supabase/supabase-js": "^2.81.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "next": "16.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
