--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "16.0.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
+    "react-calendly": "^4.4.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
