--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint",
     "test": "vitest run",
     "test:watch": "vitest",
-    "postinstall": "prisma generate"
+    "postinstall": "./node_modules/.bin/prisma generate",
+    "db:migrate": "./node_modules/.bin/prisma migrate dev",
+    "db:migrate:deploy": "./node_modules/.bin/prisma migrate deploy",
+    "db:push": "./node_modules/.bin/prisma db push",
+    "db:studio": "./node_modules/.bin/prisma studio",
+    "db:seed": "./node_modules/.bin/prisma db seed"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^6.18.0",
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.81.1",
     "dotenv": "^17.2.3",
@@ -34,6 +38,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -45,7 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "jsdom": "^27.0.1",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.3"
