--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.81.1",
     "dotenv": "^17.2.3",
+    "effect": "^3.19.15",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "next": "16.0.10",
+    "nodemailer": "^7.0.13",
     "pdf-lib": "^1.17.1",
     "prisma": "^6.18.0",
     "react": "19.2.0",
@@ -46,6 +48,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -54,5 +57,8 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.3"
+  },
+  "overrides": {
+    "fast-check": "3.22.0"
   }
 }
